added readme.md, added styling

--- a/popup.html
+++ b/popup.html
@@ -15,62 +15,62 @@
     <!-- <h3>Weight</h3>
     <p>Home is where the heart is..</p> -->
     <div class="group">
-      <label>Pounds (lb)</label>
-      <input type="number" id="inputPounds">
+      <label>Pounds</label>
+      <input type="number" id="inputPounds" placeholder="lb">
     </div>
     <div class="group">
-      <label>Ounces (oz)</label>
-      <input type="number" id="inputOunces">
+      <label>Ounces</label>
+      <input type="number" id="inputOunces" placeholder="oz">
     </div>
     <div class="group">
-      <label>Stone (st)</label>
-      <input type="number" id="inputStones">
+      <label>Stones</label>
+      <input type="number" id="inputStones" placeholder="st">
     </div>
     <div class="group">
-      <label>Kilograms (kg)</label>
-      <input type="number" id="inputKilograms">
+      <label>Kilograms</label>
+      <input type="number" id="inputKilograms" placeholder="kg">
     </div>
     <div class="group">
-      <label>Grams (g)</label>
-      <input type="number" id="inputGrams">
+      <label>Grams</label>
+      <input type="number" id="inputGrams" placeholder="g">
     </div>
   </div>
 
   <div id="Temperature" class="tabcontent">
     <div class="group">
       <label>Celsius</label>
-      <input type="number" id="inputCelsius">
+      <input type="number" id="inputCelsius" placeholder="°C">
     </div>
     <div class="group">
       <label>Fahrenheit</label>
-      <input type="number" id="inputFahrenheit">
+      <input type="number" id="inputFahrenheit" placeholder="°F">
     </div>
     <div class="group">
       <label>Kelvin</label>
-      <input type="number" id="inputKelvin">
+      <input type="number" id="inputKelvin" placeholder="°K">
     </div>
   </div>
 
   <div id="Length" class="tabcontent">
     <div class="group">
       <label>Feet</label>
-      <input type="number" id="inputFeet">
+      <input type="number" id="inputFeet" placeholder="ft ′">
     </div>
     <div class="group">
       <label>Inches</label>
-      <input type="number" id="inputInches">
+      <input type="number" id="inputInches" placeholder="in ″">
     </div>
     <div class="group">
       <label>Yards</label>
-      <input type="number" id="inputYards">
+      <input type="number" id="inputYards" placeholder="yd">
     </div>
     <div class="group">
       <label>Miles</label>
-      <input type="number" id="inputMiles">
+      <input type="number" id="inputMiles" placeholder="mi">
     </div>
     <div class="group">
       <label>Meters</label>
-      <input type="number" id="inputMeters">
+      <input type="number" id="inputMeters" placeholder="m">
     </div>
     <!-- <div class="group">
       <label>cm</label>
@@ -84,20 +84,20 @@
 
   <div id="Speed" class="tabcontent">
     <div class="group">
-      <label>MPH</label>
-      <input type="number" id="inputMPH">
+      <label>Miles per hour</label>
+      <input type="number" id="inputMPH" placeholder="mph">
     </div>
     <div class="group">
-      <label>KPH</label>
-      <input type="number" id="inputKPH">
+      <label>Kilometer per hour</label>
+      <input type="number" id="inputKPH" placeholder="km/h">
     </div>
     <div class="group">
       <label>Knots</label>
-      <input type="number" id="inputKnots">
+      <input type="number" id="inputKnots" placeholder="kn">
     </div>
     <div class="group">
       <label>Mach</label>
-      <input type="number" id="inputMach">
+      <input type="number" id="inputMach" placeholder="M">
     </div>
   </div>
 
